--- a/style.css
+++ b/style.css
@@ -7,10 +7,14 @@ body{
     width: 100%;
 }
 .content{
-    background-color: rgb(214, 214, 214);
+    background: rgb(255,225,175);
+    background: linear-gradient(180deg, rgba(255,225,175,1) 0%, rgba(182,182,255,1) 100%, rgba(0,212,255,1) 100%);
     border-radius: 20px;
-    width: 60%;
+    width: 80%;
     padding: 20px;
+    border: 0px solid;
+    padding: 20px;
+    box-shadow: 5px 10px #888888;
 }
 a{
     color: rgb(0, 119, 255);
